--- a/scripts/scRNAseq/6_figure5_plots.Rmd
+++ b/scripts/scRNAseq/6_figure5_plots.Rmd
@@ -41,6 +41,7 @@ pan8 <- readRDS("objects/seurat_cd8_panonly_clustered.rds")
 
 ```{r UMAPs of shared/non-shared}
 p_allcells_shared <- seurat_integrated@meta.data %>% 
+                      filter(!is.na(clonotype_shared_tissues)) %>%
                       ggplot(aes(x = allcells_UMAP_1, 
                                  y = allcells_UMAP_2, 
                                  color = seurat_clusters)) + 
@@ -59,7 +60,7 @@ p_allcells_shared <- seurat_integrated@meta.data %>%
                       labs(x = 'UMAP 1', 
                            y = 'UMAP 2', 
                            color=NULL,
-                           title = "T cells in blood: Clonotypes shared with pancreas") +
+                           title = "All T cells: Clonotypes shared with pancreas") +
                       scale_alpha_continuous(range = c(0.4 ,1)) +
                       scale_color_manual(values = custom_colors("clusters")) +
                       scale_size_continuous(range=c(1, 3)) +
@@ -68,10 +69,10 @@ p_allcells_shared <- seurat_integrated@meta.data %>%
                                                                       shape = 19)), 
                              size = guide_legend()) +
                       facet_wrap(~clonotype_shared_tissues)
-p_allcells_shared
 
 #PIES OF CLUSTERS IN EACH GROUP
-seurat_integrated@meta.data %>% 
+p_allcells_shared_pie <- seurat_integrated@meta.data %>% 
+    filter(!is.na(clonotype_shared_tissues)) %>%
     group_by(clonotype_shared_tissues,
              seurat_clusters) %>% 
     tally() %>% 
@@ -93,15 +94,17 @@ seurat_integrated@meta.data %>%
       geom_label_repel(aes(y = pos, label = paste0(round(prcnt, 0), "%")),
                          size = 4.5, nudge_x = 0.5, show.legend = FALSE) +
   scale_fill_manual(values = custom_colors("clusters"))
+
+grid.arrange(p_allcells_shared, p_allcells_shared_pie, nrow = 2)
 ```
 
 ```{r pancreas only cells}
 #UMAP of pancreas only shared/non-shared for CD4 and CD8 T cell clusters
 p_pan8_shared <- pan8@meta.data %>% 
-                  filter(!is.na(clonotype_shared_tissues)) %>%
+                  filter(!is.na(pancreas_matching)) %>%
                   ggplot(aes(x = UMAP_1, 
                              y = UMAP_2, 
-                             color = clonotype_shared_tissues)) + 
+                             color = pancreas_matching)) + 
                   geom_point(data = pan8@meta.data %>% 
                                dplyr::select(-treatment), 
                              shape = 16, 
@@ -115,7 +118,7 @@ p_pan8_shared <- pan8@meta.data %>%
                         text = element_text(size = 15),
                         legend.position = "right") +
                   labs(color = "Pancreas matching (PM)",
-                       title = "CD8+ T cells in pancreas:\nClonotypes shared/non-shared with periphery") +
+                       title = "CD8+ T cells in pancreas") +
                   scale_color_manual(values = custom_colors("pm")) +
                   guides(color = guide_legend(override.aes = list(alpha = 1, 
                                                                 size = 5, 
@@ -123,10 +126,10 @@ p_pan8_shared <- pan8@meta.data %>%
                   facet_wrap(~treatment)
 
 p_pan4_shared <- pan4@meta.data %>% 
-                  filter(!is.na(clonotype_shared_tissues)) %>%
+                  filter(!is.na(pancreas_matching)) %>%
                   ggplot(aes(x = UMAP_1, 
                              y = UMAP_2, 
-                             color = clonotype_shared_tissues)) + 
+                             color = pancreas_matching)) + 
                   geom_point(data = pan4@meta.data %>% 
                                dplyr::select(-treatment), 
                              shape = 16, 
@@ -140,7 +143,7 @@ p_pan4_shared <- pan4@meta.data %>%
                         text = element_text(size = 15),
                         legend.position = "right") +
                   labs(color = "Pancreas matching (PM)",
-                       title = "CD4+ T cells in pancreas:\nClonotypes shared/non-shared with periphery") +
+                       title = "CD4+ T cells in pancreas") +
                   scale_color_manual(values = custom_colors("pm")) +
                   guides(color = guide_legend(override.aes = list(alpha = 1, 
                                                                 size = 5, 
@@ -150,10 +153,10 @@ grid.arrange(p_pan8_shared, p_pan4_shared, nrow = 2)
 
 #STACKED BAR PLOT OF SHARED/NON-SHARED
 p_shared_per_cluster <- seurat_integrated@meta.data %>% 
-                          filter(tissue == "pancreas" & !is.na(clonotype_shared_tissues)) %>% #remove T cells where no TCR detected
+                          filter(tissue == "pancreas" & !is.na(pancreas_matching)) %>% #remove T cells where no TCR detected
                             ggplot(aes(x = factor(seurat_clusters, 
                                                 levels = rev(levels(seurat_integrated$seurat_clusters))), 
-                                                fill = clonotype_shared_tissues)) + 
+                                                fill = pancreas_matching)) + 
                             geom_bar(stat="count", 
                                      position = "fill") + 
                             scale_x_discrete(expand = c(0,0)) +
@@ -173,17 +176,17 @@ p_shared_per_cluster
 
 #ratio of shared/non-shared
 rbind(pan4@meta.data %>% 
-        filter(!is.na(clonotype_shared_tissues)) %>% 
-        group_by(treatment, mouse_id,clonotype_shared_tissues) %>% 
+        filter(!is.na(pancreas_matching)) %>% 
+        group_by(treatment, mouse_id, pancreas_matching) %>% 
         tally() %>% 
         mutate(celltype="CD4") %>% 
-        cast(treatment+mouse_id+celltype ~ clonotype_shared_tissues, value = "n"),
+        cast(treatment+mouse_id+celltype ~ pancreas_matching, value = "n"),
       pan8@meta.data %>% 
-        filter(!is.na(clonotype_shared_tissues)) %>% 
-        group_by(treatment, mouse_id,clonotype_shared_tissues) %>% 
+        filter(!is.na(pancreas_matching)) %>% 
+        group_by(treatment, mouse_id, pancreas_matching) %>% 
         tally() %>% 
         mutate(celltype="CD8") %>% 
-        cast(treatment+mouse_id+celltype ~ clonotype_shared_tissues,value = "n")) %>% 
+        cast(treatment+mouse_id+celltype ~ pancreas_matching, value = "n")) %>% 
         group_by(treatment, mouse_id, celltype) %>% 
         summarize(ratio = `pancreas PM`/`pancreas non-PM`) %>% 
   ggplot(aes(x = treatment, 
@@ -209,12 +212,12 @@ Next, examine how clones in various Seurat clusters in the pancreas differ in tr
 #line plots of exhaustion signatures: choose each cluster in pancreas and track that clonotype through the other tissues
 clonotypes_pancreas_means <- seurat_integrated@meta.data %>% 
                               filter(tissue == "pancreas" & clonotype_tissue_groups == "pLN&blood&pancreas") %>% 
-                              group_by(seurat_clusters,clonotype_id,tissue) %>%
+                              group_by(seurat_clusters, clonotype_id, tissue) %>%
                               summarize(mean = mean(Miller2019_terminally_exh1, na.rm = T)) %>%
                               cast(seurat_clusters + clonotype_id ~ tissue, value = "mean")
 clonotypes_periphery_means <- seurat_integrated@meta.data %>% 
                                 filter(tissue != "pancreas" & clonotype_id %in% clonotypes_pancreas_means$clonotype_id) %>%
-                                group_by(clonotype_id,tissue) %>%
+                                group_by(clonotype_id, tissue) %>%
                                 summarize(mean = mean(Miller2019_terminally_exh1, na.rm = T)) %>%
                                 cast(clonotype_id ~ tissue, value = "mean")
 clonotypes_means <- merge(clonotypes_pancreas_means, clonotypes_periphery_means , by = "clonotype_id") %>% 
@@ -256,7 +259,7 @@ p_termexh_clonotypes <- clonotypes_means %>%
 
 clonotypes_pancreas_means <- seurat_integrated@meta.data %>% 
                               filter(tissue == "pancreas" & clonotype_tissue_groups == "pLN&blood&pancreas") %>% 
-                              group_by(seurat_clusters,clonotype_id,tissue) %>%
+                              group_by(seurat_clusters, clonotype_id, tissue) %>%
                               summarize(mean = mean(Miller2019_effector_like1, na.rm = T)) %>%
                               cast(seurat_clusters + clonotype_id ~ tissue, value = "mean")
 clonotypes_periphery_means <- seurat_integrated@meta.data %>% 
@@ -304,7 +307,7 @@ p_eff_clonotypes <- clonotypes_means %>%
 #memory-vs-effector
 clonotypes_pancreas_means <- seurat_integrated@meta.data %>% 
                               filter(tissue == "pancreas" & clonotype_tissue_groups == "pLN&blood&pancreas") %>% 
-                              group_by(seurat_clusters,clonotype_id,tissue) %>%
+                              group_by(seurat_clusters, clonotype_id, tissue) %>%
                               summarize(mean = mean(GOLDRATH_EFF_VS_MEMORY_CD8_TCELL_DN1, na.rm = T)) %>%
                               cast(seurat_clusters + clonotype_id ~ tissue, value = "mean")
 clonotypes_periphery_means <- seurat_integrated@meta.data %>% 
